--- a/parts/replace/replacedlg.ui
+++ b/parts/replace/replacedlg.ui
@@ -96,6 +96,9 @@
                     <property name="text">
                         <string>Case sensitive</string>
                     </property>
+                    <property name="checked">
+                        <bool>true</bool>
+                    </property>
                 </widget>
                 <widget class="QButtonGroup">
                     <property name="name">
