--- a/lib/project/environmentvariableswidgetbase.ui
+++ b/lib/project/environmentvariableswidgetbase.ui
@@ -8,7 +8,7 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>661</width>
+            <width>747</width>
             <height>307</height>
         </rect>
     </property>
@@ -52,7 +52,7 @@
                 </sizepolicy>
             </property>
             <property name="text">
-                <string>Add...</string>
+                <string>Add / Edit...</string>
             </property>
         </widget>
         <widget class="QPushButton" row="1" column="1">
