--- a/parts/trollproject/projectconfigurationdlgbase.ui
+++ b/parts/trollproject/projectconfigurationdlgbase.ui
@@ -10,7 +10,7 @@
             <x>0</x>
             <y>0</y>
             <width>586</width>
-            <height>483</height>
+            <height>529</height>
         </rect>
     </property>
     <property name="sizePolicy">
@@ -78,17 +78,11 @@
                 <attribute name="title">
                     <string>B&amp;asics</string>
                 </attribute>
-                <vbox>
+                <grid>
                     <property name="name">
                         <cstring>unnamed</cstring>
                     </property>
-                    <property name="margin">
-                        <number>11</number>
-                    </property>
-                    <property name="spacing">
-                        <number>6</number>
-                    </property>
-                    <widget class="QButtonGroup">
+                    <widget class="QButtonGroup" row="0" column="0">
                         <property name="name">
                             <cstring>groupTemplate</cstring>
                         </property>
@@ -140,7 +134,7 @@
                             </widget>
                         </vbox>
                     </widget>
-                    <widget class="QGroupBox">
+                    <widget class="QGroupBox" row="1" column="0">
                         <property name="name">
                             <cstring>GroupBox1</cstring>
                         </property>
@@ -204,7 +198,7 @@
                             </widget>
                         </grid>
                     </widget>
-                    <spacer>
+                    <spacer row="3" column="0">
                         <property name="name">
                             <cstring>Spacer3</cstring>
                         </property>
@@ -216,12 +210,46 @@
                         </property>
                         <property name="sizeHint">
                             <size>
-                                <width>0</width>
-                                <height>30</height>
+                                <width>20</width>
+                                <height>40</height>
                             </size>
                         </property>
                     </spacer>
-                </vbox>
+                    <widget class="QGroupBox" row="2" column="0">
+                        <property name="name">
+                            <cstring>groupBox7</cstring>
+                        </property>
+                        <property name="title">
+                            <string>Target Installation</string>
+                        </property>
+                        <grid>
+                            <property name="name">
+                                <cstring>unnamed</cstring>
+                            </property>
+                            <widget class="KLineEdit" row="0" column="2">
+                                <property name="name">
+                                    <cstring>m_InstallTargetPath</cstring>
+                                </property>
+                            </widget>
+                            <widget class="QCheckBox" row="0" column="0">
+                                <property name="name">
+                                    <cstring>checkInstallTarget</cstring>
+                                </property>
+                                <property name="text">
+                                    <string>install</string>
+                                </property>
+                            </widget>
+                            <widget class="QLabel" row="0" column="1">
+                                <property name="name">
+                                    <cstring>textLabel1_2</cstring>
+                                </property>
+                                <property name="text">
+                                    <string>installpath:</string>
+                                </property>
+                            </widget>
+                        </grid>
+                    </widget>
+                </grid>
             </widget>
             <widget class="QWidget">
                 <property name="name">
@@ -1668,6 +1696,7 @@
 </slots>
 <layoutdefaults spacing="6" margin="11"/>
 <includehints>
+    <includehint>klineedit.h</includehint>
     <includehint>klineedit.h</includehint>
     <includehint>klineedit.h</includehint>
     <includehint>klineedit.h</includehint>
