--- a/parts/cvs/logform.ui
+++ b/parts/cvs/logform.ui
@@ -1,4 +1,4 @@
-<!DOCTYPE UI><UI version="3.0" stdsetdef="1">
+<!DOCTYPE UI><UI version="3.1" stdsetdef="1">
 <class>LogForm</class>
 <widget class="QWidget">
     <property name="name">
@@ -35,22 +35,21 @@
         </widget>
     </vbox>
 </widget>
-<connections>
-</connections>
 <includes>
     <include location="local" impldecl="in implementation">logform.ui.h</include>
 </includes>
 <forwards>
     <forward>class QProcess;</forward>
+    <forward>class KURL;</forward>
 </forwards>
 <variables>
+    <variable>QString pathName;</variable>
     <variable>QProcess* process;</variable>
-    <variable>QString filename;</variable>
 </variables>
 <slots>
     <slot>init()</slot>
     <slot>destroy()</slot>
-    <slot>start( const QString &amp; fn )</slot>
+    <slot>start( const QString &amp; workDir, const KURL &amp; fn )</slot>
     <slot>slotProcessExited()</slot>
     <slot>slotReadStdout()</slot>
     <slot>slotReadStderr()</slot>
